Creacion de clases (Login, Conexion)

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,9 @@ dist.jlink.output=${dist.jlink.dir}/To-Do
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.ConexionMySQ.classpath}:\
+    ${libs.SQLite3.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=To-Do
-main.class=
+main.class=database.loginDB
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
