Agregacion parcial de los CRUD

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/To-Do
 excludes=
 file.reference.RSScaleLabel.jar=C:\\Users\\User\\Downloads\\RSScaleLabel.jar
+file.reference.RSScaleLabel.jar-1=/home/darielrdriguez/Downloads/RSScaleLabel.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-<<<<<<< HEAD
+    <<<<<<< HEAD:\
+    ${libs.absolutelayout.classpath}:\
+    ${libs.ImagesGUI.classpath}:\
+    ${file.reference.RSScaleLabel.jar-1}:\
+    ${libs.SQLite3.classpath}
     ${libs.ConexionMySQ.classpath}:\
     ${libs.SQLite3.classpath}
 =======
@@ -79,7 +84,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=To-Do
-main.class=database.CRUD_To_Do
+main.class=GUI.Log
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
