--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=To-Do
+application.vendor=darielrdriguez
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/To-Do.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/To-Do
+endorsed.classpath=
 excludes=
 file.reference.RSScaleLabel.jar=C:\\Users\\User\\Downloads\\RSScaleLabel.jar
 file.reference.RSScaleLabel.jar-1=/home/darielrdriguez/Downloads/RSScaleLabel.jar
@@ -42,7 +44,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.ImagesGUI.classpath}:\
     ${file.reference.RSScaleLabel.jar-1}:\
-    ${libs.SQLite3.classpath}
+    ${libs.SQLite3.classpath}:\
+    ${libs.JCalendar.classpath}
     ${libs.ConexionMySQ.classpath}:\
     ${libs.SQLite3.classpath}
 =======
